# automatic_trading

./: .env.example  .gitignore  CLAUDE.md  Makefile  VERIFICATION.md  pyproject.toml  test.txt
broker/: auth.py  client.py  exceptions.py  models.py
config/: settings.py
execution/: models.py  order_manager.py  position_monitor.py
logging_config/: setup.py
market_data/: float_filter.py  history.py  models.py  screener.py
orchestration/: morning_workflow.py
scripts/: dry_run.py  keepalive_only.py  replay.py  run_morning.py  smoke_test.py
strategy/: base.py  first_dip.py  models.py  momentum.py  signals.py
tests/: conftest.py  test_auth.py  test_client.py  test_first_dip_strategy.py  test_float_filter.py  test_history.py  test_momentum_strategy.py  test_morning_workflow.py  test_order_manager.py  test_position_monitor.py  test_screener.py  test_signals.py
